# bio-dashboard-bot

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  bot.py  docker-compose.yml  playbook.yaml  privacy_policy.md  pyproject.toml  requirements.txt  run_agent.py  runtime.txt.rtf
alembic/: env.py
alembic/versions/: 0001_init.py
src/scc/api/: main.py
src/scc/api/routes/: __init__.py  channels.py  postwindows.py
src/scc/bot/: bot.py
src/scc/core/: config.py  db.py
src/scc/models/: __init__.py  alerts.py  channels.py  my_videos.py  tg_users.py  video_snapshots.py  videos.py  watchlists.py
src/scc/schemas/: __init__.py  channel.py
src/scc/services/: __init__.py  alerts_service.py  cluster_service.py  llm_service.py  postwindow_service.py  youtube_service.py
src/scc/signals/: speed.py
src/scc/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_bot_handlers.py  test_channels.py  test_health.py  test_postwindows.py  test_signals.py
