[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts-command-center"
version = "0.1.0"
description = "Shorts Command Center"
requires-python = ">=3.11"
authors = [{name = "Dev", email = "dev@example.com"}]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "celery>=5.3",
    "redis>=5.0",
    "python-telegram-bot>=20.0",
    "google-api-python-client>=2.118",
    "openai>=1.40.0",
    "pydantic-settings>=2.0",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://example.com"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
